src/ui/snapshots/state/default/cherry_pick/all_success.snap
---
source: src/ui/state/default/cherry_pick.rs
expression: harness.backend()
---
"                                                                                                                        "
" ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │Cherry-picking Commits                                                                                              │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Commits──────────────────────────────────────────────────────────────┐┌Details──────────────────────────────────────┐ "
" │✅ [1/4] PR #100: Fix login bug                                      ││                                             │ " Hidden by multi-width symbols: [(3, " ")]
" │✅ [2/4] PR #101: Update user profile page design                    ││─────────────────────                        │ " Hidden by multi-width symbols: [(3, " ")]
" │✅ [3/4] PR #102: Add analytics tracking                             ││                                             │ " Hidden by multi-width symbols: [(3, " ")]
" │✅ [4/4] PR #103: Database schema changes                            ││Branch: patch/main-v1.0.0                    │ " Hidden by multi-width symbols: [(3, " ")]
" │                                                                     ││Location: /path/to/repo                      │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" │                                                                     ││                                             │ "
" └─────────────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────┘ "
" ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │Processing cherry-picks...                                                                                          │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                                                        "
