src/ui/snapshots/state/default/cherry_pick/initial_index.snap
---
source: src/ui/state/default/cherry_pick.rs
expression: harness.backend()
---
"                                                                                "
" ┌────────────────────────────────────────────────────────────────────────────┐ "
" │Cherry-picking Commits                                                      │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Commits──────────────────────────────────────┐┌Details──────────────────────┐ "
" │⏸ [1/4] PR #100: Fix login bug               ││Current PR: #100             │ "
" │⏳ [2/4] PR #101: Update user profile page de││                             │ " Hidden by multi-width symbols: [(3, " ")]
" │⏸ [3/4] PR #102: Add analytics tracking      ││Title: Fix login bug         │ "
" │⚠️ [4/4] PR #103: Database schema changes    ││                             │ " Hidden by multi-width symbols: [(3, " ")]
" │                                             ││Commit: abc123de             │ "
" │                                             ││                             │ "
" │                                             ││Status: Pending              │ "
" │                                             ││                             │ "
" │                                             ││─────────────────────        │ "
" │                                             ││                             │ "
" │                                             ││Branch: patch/main-v1.0.0    │ "
" │                                             ││Location: /path/to/repo      │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" └─────────────────────────────────────────────┘└─────────────────────────────┘ "
" ┌────────────────────────────────────────────────────────────────────────────┐ "
" │Processing cherry-picks...                                                  │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
