src/ui/snapshots/state/default/cherry_pick/with_failed.snap
---
source: src/ui/state/default/cherry_pick.rs
expression: harness.backend()
---
"                                                                                "
" ┌────────────────────────────────────────────────────────────────────────────┐ "
" │Cherry-picking Commits                                                      │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Commits──────────────────────────────────────┐┌Details──────────────────────┐ "
" │✅ [1/4] PR #100: Fix login bug              ││Current PR: #102             │ " Hidden by multi-width symbols: [(3, " ")]
" │❌ [2/4] PR #101: Update user profile page de││                             │ " Hidden by multi-width symbols: [(3, " ")]
" │⏸ [3/4] PR #102: Add analytics tracking      ││Title: Add analytics tracking│ "
" │⚠️ [4/4] PR #103: Database schema changes    ││                             │ " Hidden by multi-width symbols: [(3, " ")]
" │                                             ││Commit: analytic             │ "
" │                                             ││                             │ "
" │                                             ││Status: Pending              │ "
" │                                             ││                             │ "
" │                                             ││─────────────────────        │ "
" │                                             ││                             │ "
" │                                             ││Branch: patch/main-v1.0.0    │ "
" │                                             ││Location: /path/to/repo      │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" └─────────────────────────────────────────────┘└─────────────────────────────┘ "
" ┌────────────────────────────────────────────────────────────────────────────┐ "
" │Processing cherry-picks...                                                  │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
