src/ui/snapshots/state/default/cherry_pick/with_skipped.snap
---
source: src/ui/state/default/cherry_pick.rs
expression: harness.backend()
---
"                                                                                "
" ┌────────────────────────────────────────────────────────────────────────────┐ "
" │Cherry-picking Commits                                                      │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
" ┌Commits──────────────────────────────────────┐┌Details──────────────────────┐ "
" │✅ [1/4] PR #100: Fix login bug              ││Current PR: #103             │ " Hidden by multi-width symbols: [(3, " ")]
" │⏭ [2/4] PR #101: Update user profile page des││                             │ "
" │⏭ [3/4] PR #102: Add analytics tracking      ││Title: Database schema       │ "
" │⚠️ [4/4] PR #103: Database schema changes    ││changes                      │ " Hidden by multi-width symbols: [(3, " ")]
" │                                             ││                             │ "
" │                                             ││Commit: conflict             │ "
" │                                             ││                             │ "
" │                                             ││Status: Conflict             │ "
" │                                             ││                             │ "
" │                                             ││─────────────────────        │ "
" │                                             ││                             │ "
" │                                             ││Branch: patch/main-v1.0.0    │ "
" │                                             ││Location: /path/to/repo      │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" │                                             ││                             │ "
" └─────────────────────────────────────────────┘└─────────────────────────────┘ "
" ┌────────────────────────────────────────────────────────────────────────────┐ "
" │Processing cherry-picks...                                                  │ "
" └────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                "
